--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -163,12 +163,20 @@ nav#menu, nav#menu-home {
 					text-decoration: none;
 				}
 			}
+			#home-small-name { 
+				position: absolute; 
+				left: 0; 
+				top: 0;
+				opacity: 1; 
+				transition: opacity 200ms, top 200ms;
+			}
 		}
 		&.stick {
 			.logo { opacity: 0; }
 			nav#menu-home {
 				position: fixed;
 				#home-small-logo { opacity: 1; top: 0; }
+				#home-small-name { opacity: 0; top: -20px; }
 			}
 		}
 	}
