--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -32,6 +32,7 @@ $button-h-l: 60px;
 // Utilities
 // ------------------------------------------------------------------------
 
+.pointer-events-all { pointer-events: all; }
 .color-white		{ color: white; }
 .font-600   		{ font-weight: 600; }
 .border-bottom	{ border-bottom: 1px solid black !important; }
